# ai-for-developers-project-387

./: .dockerignore  .gitignore  .release-please-manifest.json  AGENTS.md  Dockerfile  Makefile  README.md  main.tsp  package-lock.json  package.json  release-please-config.json  tspconfig.yaml
.github/workflows/: daily-lighthouse-performance.yml  daily-schedule-code-audit.yml  lighthouse-performance-manual.yml  lighthouse-performance.yaml  lighthouse-performance.yml  manual-opencode-task.yaml  manual-opencode-task.yml  opencode.yml  release-please.yml  schedule-code-audit.yaml  schedule-code-audit.yml
backend/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
backend/booking_api/: serializers.py  storage.py  urls.py
backend/booking_api/services/: availability_service.py  booking_service.py  event_type_service.py  slot_service.py
backend/booking_api/views/: __init__.py  owner_availability.py  owner_bookings.py  owner_event_types.py  public_bookings.py  public_event_types.py
backend/config/: settings.py  urls.py
docs/: performance-baseline.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: booking-flow.spec.ts
frontend/: CHANGELOG.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: availability.mutations.ts  availability.queries.ts  (+6 more)
models/: availability.tsp  booking.tsp  common.tsp  event-type.tsp  slot.tsp
routes/owner/: availability.tsp  bookings.tsp  event-types.tsp
routes/public/: bookings.tsp  event-types.tsp
(+14 files in other folders)
